<resources>

    <string name="app_name">KeepDo!</string>

    <!-- Navigation drawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_item_sort">Sort</string>
    <string name="drawer_category_backup_restore">Backup&amp;Restore</string>
    <string name="drawer_item_backup_restore_device">Device storage</string>
    <string name="drawer_item_backup_restore_drive">Google drive</string>
    <string name="drawer_item_settings">Settings</string>

    <string name="tasklist_header_today_task">Today\'s Do</string>
    <string name="tasklist_header_other_task">Other Do</string>
    <string name="tasklist_header_today_remaining_task">Today\'s remaining Do</string>
    <string name="tasklist_lastdonedate_notyet">Not yet</string>
    <string name="tasklist_lastdonedate_today">Today</string>
    <string name="tasklist_lastdonedate_yesterday">Yesterday</string>
    <string name="tasklist_lastdonedate_diffdays">%d days ago</string>
    <string name="tasklist_combo">%d combo!</string>
    <string name="add_task">Create Do</string>
    <string name="edit_task">Edit Do</string>
    <string name="delete_task">Delete Do</string>
    <string name="task_name">Title</string>
    <string name="hint_task_name">Input title of Do</string>
    <string name="settings">Settings</string>
    <string name="general_setting">General setting</string>
    <string name="history_calendar_setting">History calendar setting</string>
    <string name="reminder_setting">Reminder setting</string>
    <string name="preferences_done_icon_title">Done icon</string>
    <string name="preferences_date_change_time_title">Date change time</string>
    <string name="preferences_calendar_week_start_day_title">Start week on</string>
    <string name="preferences_date_change_time_summary">Date of Do list is updated at %s.</string>
    <string name="preferences_alerts_ringtone_title">Notification sound</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibration</string>
    <string name="recurrence">Recurrence</string>
    <string name="recurrence_separator">, </string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_start">Start</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No reminder</string>
    <string name="description">Description</string>
    <string name="hint_task_description">Event description</string>
    <string name="task_save">Save</string>
    <string name="task_cancel">Cancel</string>
    <string name="delete_confirmation">Are you sure you want to delete this Do ?</string>
    <string name="date_changed">Date changed</string>
    <string name="date_format">MM/dd(E)</string>
    <string name="check_done">Check done</string>
    <string name="uncheck_done">Uncheck done</string>
    <string name="notification_title_one_task">There\'s a Do to be done today!</string>
    <string name="notification_title_multi_tasks">There\'re %d Do to be done today!</string>
    <string name="remind_at">Remind at</string>
    <string name="number_of_done">Total number of Done</string>
    <string name="current_and_max_combo">Current combo / Max combo</string>
    <string name="first_done_date">First day of Done</string>
    <string name="last_done_date">Last day of Done</string>
    <string name="number_of_times">%d times</string>

    <string name="menu_details">Details</string>
    <string name="menu_share">Share</string>
    <string name="share_combo">Do "%1$s" is now in %2$d combo!</string>
    <string name="share_non_combo">Do "%1$s" has been done %2$d times.</string>
    <string name="share_app_url">from KeepDo! https://play.google.com/store/apps/details?id=com.hkb48.keepdo</string>
    <string name="menu_edit">Edit</string>

    <string translatable="false" name="accessibility_done_mark">Done mark</string>
    <string translatable="false" name="accessibility_remove_reminder">Remove reminder</string>
    <string translatable="false" name="accessibility_arrow">Arrow</string>

    <string-array name="week_names">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    <string name="title_section1">Calendar</string>
    <string name="title_section2">Details</string>
    <string name="menu_settings">Settings</string>
    <string name="backup_restore">Backup and Restore</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="sort_task">Sort</string>

    <!-- Time when date changes -->
    <string-array translatable="false" name="prefEntries_date_change_time">
        <item>24:00 (AM 0:00)</item>
        <item>25:00 (AM 1:00)</item>
        <item>26:00 (AM 2:00)</item>
        <item>27:00 (AM 3:00)</item>
        <item>28:00 (AM 4:00)</item>
        <item>29:00 (AM 5:00)</item>
        <item>30:00 (AM 6:00)</item>
    </string-array>

    <!-- The default time when date changes, when none is set -->
    <string translatable="false" name="prefDefault_date_change_time">24:00</string>

    <!-- The date change time values -->
    <string-array translatable="false" name="prefValues_date_change_time">
        <item>24:00</item>
        <item>25:00</item>
        <item>26:00</item>
        <item>27:00</item>
        <item>28:00</item>
        <item>29:00</item>
        <item>30:00</item>
    </string-array>

    <!-- The week start day on the calendar -->
    <string-array name="prefEntries_calendar_week_start_day">
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>

    <!-- The default week start day value, when none is set -->
    <string translatable="false" name="prefDefault_calendar_week_start_day">"1"</string>

    <!-- The week start day values -->
    <string-array translatable="false" name="prefValues_calendar_week_start_day">
        <item>"1"</item>
        <item>"2"</item>
    </string-array>

    <!-- The vibrate notification modes -->
    <string-array name="prefEntries_alerts_vibrateWhen">
        <!-- Always -->
        <item>Always</item>
        <!-- Only when the phone is in Silent mode -->
        <item>Only when silent</item>
        <!-- Never -->
        <item>Never</item>
    </string-array>

    <string translatable="false" name="prefDefault_done_icon">type1</string>

    <!-- The default vibrateWhen value, when none is set -->
    <string translatable="false" name="prefDefault_alerts_vibrateWhen">never</string>

    <!-- The vibrateWhen values -->
    <string-array translatable="false" name="prefValues_alerts_vibrateWhen">
        <item>always</item>
        <item>silent</item>
        <item>never</item>
    </string-array>

    <!-- Dialog title for the Done icon dialog -->
    <string name="prefDialogTitle_selectDoneIcon">Select Done icon</string>

    <!-- Dialog title for the Date change time dialog -->
    <string name="prefDialogTitle_date_change_time">Date change time</string>

    <!-- Dialog title for the Date change time dialog -->
    <string name="prefDialogTitle_calendar_week_start_day">Week start day</string>

    <!-- Dialog title for the Vibrate dialog -->
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    
    <!-- Toas message to encourage create new tasks -->
    <string name="tasklist_msg_newtask">Press \'+\' menu to adds new Do!</string>

    <!-- Backup & Restore -->
    <string-array name="dialog_choice_backup_restore">
        <item>Backup</item>
        <item>Restore</item>
    </string-array>
    <string name="backup_done">Backed up.</string>
    <string name="restore_done">Restored.</string>
    <string name="no_backup_file">No backup file.</string>

    <!-- Widget -->
    <string name="task_empty">No remaining tasks</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>