<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="preferences_general_category"
        android:title="@string/general_setting">

        <com.hkb48.keepdo.settings.DoneIconPreference
            android:defaultValue="@string/prefDefault_done_icon"
            android:dialogTitle="@string/prefDialogTitle_selectDoneIcon"
            android:key="preferences_done_icon"
            android:layout="?android:attr/preferenceLayoutChild"
            android:negativeButtonText=""
            android:positiveButtonText=""
            android:title="@string/preferences_done_icon_title" />
        <ListPreference
            android:defaultValue="@string/prefDefault_date_change_time"
            android:dialogTitle="@string/prefDialogTitle_date_change_time"
            android:entries="@array/prefEntries_date_change_time"
            android:entryValues="@array/prefValues_date_change_time"
            android:key="preferences_date_change_time"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferences_date_change_time_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="preferences_calendar_category"
        android:title="@string/history_calendar_setting">

        <ListPreference
            android:defaultValue="@string/prefDefault_calendar_week_start_day"
            android:dialogTitle="@string/prefDialogTitle_calendar_week_start_day"
            android:entries="@array/prefEntries_calendar_week_start_day"
            android:entryValues="@array/prefValues_calendar_week_start_day"
            android:key="preferences_calendar_week_start_day"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferences_calendar_week_start_day_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="preferences_calendar_enable_future_date"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferences_calendar_enable_future_date" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="preferences_alerts_category"
        android:title="@string/reminder_setting">

        <com.hkb48.keepdo.settings.RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="preferences_alerts_ringtone"
            android:layout="?android:attr/preferenceLayoutChild"
            android:ringtoneType="notification"
            android:title="@string/preferences_alerts_ringtone_title" />

        <ListPreference
            android:defaultValue="@string/prefDefault_alerts_vibrateWhen"
            android:dialogTitle="@string/prefDialogTitle_vibrateWhen"
            android:entries="@array/prefEntries_alerts_vibrateWhen"
            android:entryValues="@array/prefValues_alerts_vibrateWhen"
            android:key="preferences_alerts_vibrateWhen"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferences_alerts_vibrateWhen_title" />

        <Preference
            android:key="preferences_notification"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferences_notification_title" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
