<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/includedToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?attr/dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout style="@style/TaskDetailItemStyle">

                <TextView
                    android:id="@+id/taskDetailRecurrence"
                    style="@style/TaskDetailItemCategoryStyle"
                    android:text="@string/recurrence" />

                <com.hkb48.keepdo.RecurrenceView
                    android:id="@+id/recurrenceView"
                    style="@style/TaskDetailItemContentsStyle"
                    android:orientation="horizontal" />
            </LinearLayout>

            <LinearLayout style="@style/TaskDetailItemStyle">

                <TextView
                    android:id="@+id/taskDetailReminder"
                    style="@style/TaskDetailItemCategoryStyle"
                    android:text="@string/reminder" />

                <TextView
                    android:id="@+id/taskDetailReminderValue"
                    style="@style/TaskDetailItemContentsStyle"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskDetailContextContainer"
                style="@style/TaskDetailItemStyle">

                <TextView
                    android:id="@+id/taskDetailContext"
                    style="@style/TaskDetailItemCategoryStyle"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/taskDetailContextDescription"
                    style="@style/TaskDetailItemContentsStyle"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout style="@style/TaskDetailItemStyle">

                <TextView
                    android:id="@+id/taskDetailNumOfDone"
                    style="@style/TaskDetailItemCategoryStyle"
                    android:text="@string/number_of_done" />

                <TextView
                    android:id="@+id/taskDetailNumOfDoneValue"
                    style="@style/TaskDetailItemContentsStyle"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskDetailComboContainer"
                style="@style/TaskDetailItemStyle">

                <TextView
                    android:id="@+id/taskDetailCombo"
                    style="@style/TaskDetailItemCategoryStyle"
                    android:text="@string/current_and_max_combo" />

                <TextView
                    android:id="@+id/taskDetailComboValue"
                    style="@style/TaskDetailItemContentsStyle"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskDetailFirstDoneDateContainer"
                style="@style/TaskDetailItemStyle">

                <TextView
                    android:id="@+id/taskDetailFirstDoneDate"
                    style="@style/TaskDetailItemCategoryStyle"
                    android:text="@string/first_done_date" />

                <TextView
                    android:id="@+id/taskDetailFirstDoneDateValue"
                    style="@style/TaskDetailItemContentsStyle"
                    android:textIsSelectable="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/taskDetailLastDoneDateContainer"
                style="@style/TaskDetailItemStyle">

                <TextView
                    android:id="@+id/taskDetailLastDoneDate"
                    style="@style/TaskDetailItemCategoryStyle"
                    android:text="@string/last_done_date" />

                <TextView
                    android:id="@+id/taskDetailLastDoneDateValue"
                    style="@style/TaskDetailItemContentsStyle"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>