<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.hkb48.keepdo.ui.tasklist.TaskListFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_taskListFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_taskListFragment_to_taskSortFragment"
            app:destination="@id/taskSortFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_taskListFragment_to_calendarFragment"
            app:destination="@id/calendarFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_taskListFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.hkb48.keepdo.ui.addedit.AddEditTaskFragment"
        android:label="{title}">
        <argument
            android:name="taskId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/taskSortFragment"
        android:name="com.hkb48.keepdo.ui.sort.TaskSortFragment"
        android:label="@string/sort_task" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.hkb48.keepdo.ui.calendar.CalendarFragment"
        android:label="{title}">
        <argument
            android:name="taskId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_calendarFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.hkb48.keepdo.ui.detail.TaskDetailFragment"
        android:label="{title}">
        <action
            android:id="@+id/action_taskDetailFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="taskId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.hkb48.keepdo.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>